--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <title>ChatApp</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
+
     <link rel="icon" type="image/x-icon" href="./assets/logoHalf.png" />
     <link
       rel="stylesheet"
